# hermes-mail

./: README.md  pyproject.toml
hermes_mail/: __init__.py
hermes_mail/_src/: hermes_mail.py
